# MTP-Real-Robot-Data-Collection

./: README.md  docker-compose.yml  useful_demos.txt
devel/: .catkin
devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
devel/lib/franka_collector/: franka_replay_moveit.py
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_example_controllers/: teleop_gripper_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/pkgconfig/: franka_collector.pc  franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc
devel/share/franka_collector/cmake/: franka_collectorConfig.cmake
devel/share/franka_control/cmake/: franka_controlConfig.cmake
devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
devel/share/franka_example_controllers/cmake/: franka_example_controllers-msg-paths.cmake  franka_example_controllersConfig.cmake
devel/share/franka_gazebo/cmake/: franka_gazeboConfig.cmake
devel/share/franka_gripper/cmake/: franka_gripper-msg-extras.cmake  franka_gripper-msg-paths.cmake  franka_gripperConfig.cmake
src/franka_collector/: CMakeLists.txt  package.xml.save
src/franka_collector/src/: Run_policy.py  camera_publisher.py  data_collector_controlled.py  franka_data_collector.py  franka_replay.py  franka_replay_moveit.py  joint_state_publisher.py
(+13 files in other folders)
